# chat-proto

./: Cargo.toml  README.md  build.rs
proto/: channel.proto  channel_inputs.proto  channel_nats.proto  chat_svc.proto  chatgroup.proto  chatgroup_inputs.proto  chatgroup_nats.proto  common_entities.proto  common_peer.proto  connections_svc.proto  error_reply.proto  message.proto  message_inputs.proto  message_nats.proto  nats_emptyresponse.proto  nats_metadata.proto  updates_svc.proto
proto/channel/: channel.proto  channel_inputs.proto  channel_nats.proto  channel_shared.proto
proto/channel/v1/: channel_shared.proto  entities.proto  service_messages.proto
proto/chat/: chat.proto  chat_inputs.proto  chat_nats.proto
proto/chatgroup/: chatgroup.proto  chatgroup_inputs.proto  chatgroup_nats.proto  entities.proto  nats_messages.proto
proto/chatgroup/v1/: entities.proto  service_messages.proto
proto/common/v1/: available_reactions.proto  chat.proto  (+8 more)
proto/connections/: nats.proto  updates_inputs.proto  updates_nats.proto
proto/updates/: error_reply.proto  nats_emptyresponse.proto  nats_metadata.proto  updates_container.proto  updates_inputs.proto  updates_nats.proto  updates_stream.proto
proto/user/: user.proto  user_inputs.proto  user_nats.proto
proto/userprofile/: userprofile.proto  userprofile_inputs.proto  userprofile_nats.proto
src/: chat.rs  error.rs  lib.rs  messages.rs  subjects.rs  updates_stream.rs
src/proto_ext/: empty_response_ext.rs  mod.rs  proto.rs  proto_date_converter.rs  proto_traits.rs
src/rich_error/: error_details.rs  mod.rs
(+226 files in other folders)
