[package]
name = "chat-proto"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC
prost = "0.11.0"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["gzip", "transport", "prost"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
