[package]
name = "chat-proto"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["gzip", "transport", "prost"] }
tonic-reflection = "0.9.2"

chrono = { version = "0.4.26", features = ["serde"] }

thiserror = "1.0.30"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
