[package]
name = "chat-proto"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC
prost = "0.12.1"
prost-types = "0.12.1"
tonic = { version = "0.10.0", features = ["gzip", "transport", "prost"] }
tonic-reflection = "0.10.0"

chrono = { version = "0.4.26", features = ["serde"] }

thiserror = "1.0.48"

[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] }
